// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Button changes state when clicked 1`] = `
<button
  onClick={[Function]}
>
  false
</button>
`;

exports[`Button changes state when clicked 2`] = `
<button
  onClick={[Function]}
>
  true
</button>
`;

exports[`Button container's properties should be map to Button  1`] = `
<button
  onClick={undefined}
>
  false
</button>
`;

exports[`Button container's state should be map to Button  1`] = `
<button
  onClick={undefined}
>
  true
</button>
`;
